# Indwell

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
crates/indwell-channel/: Cargo.toml
crates/indwell-channel/src/: lib.rs
crates/indwell-console-pwa/: README.md  app.js  index.html  manifest.webmanifest  styles.css  sw.js
crates/indwell-core/: Cargo.toml
crates/indwell-core/src/: lib.rs
crates/indwell-fw-esp32s3/: Cargo.toml
crates/indwell-fw-esp32s3/src/: lib.rs
crates/indwell-hal/: Cargo.toml
crates/indwell-hal/src/: lib.rs
crates/indwell-host-sim/: Cargo.toml
crates/indwell-host-sim/src/: context.rs  main.rs  ota.rs  planner.rs  provider_config.rs  tools.rs
crates/indwell-memory/: Cargo.toml
crates/indwell-memory/src/: lib.rs
crates/indwell-ota/: Cargo.toml
crates/indwell-ota/src/: lib.rs
crates/indwell-protocol/: Cargo.toml
crates/indwell-protocol/src/: lib.rs
crates/indwell-provider/: Cargo.toml
crates/indwell-provider/src/: lib.rs
crates/indwell-reflection/: Cargo.toml
crates/indwell-reflection/src/: lib.rs
crates/indwell-runs/: Cargo.toml
crates/indwell-runs/src/: lib.rs
crates/indwell-security/: Cargo.toml
crates/indwell-security/src/: lib.rs
docs/: esp-idf-driver-map.md  firmware.md  hardware.md  memory.md  mobile-control.md  provider-api.md  reflection.md  security.md
firmware/: partitions.csv  sdkconfig.defaults
scripts/: smoke-host-sim.sh  verify-nonhardware.sh
