[package]
name = "indwell-fw-esp32s3"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
indwell-core = { path = "../indwell-core" }
indwell-hal = { path = "../indwell-hal" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
