[package]
name = "indwell-host-sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
indwell-channel = { path = "../indwell-channel" }
indwell-core = { path = "../indwell-core" }
indwell-memory = { path = "../indwell-memory" }
indwell-ota = { path = "../indwell-ota" }
indwell-provider = { path = "../indwell-provider" }
indwell-protocol = { path = "../indwell-protocol" }
indwell-reflection = { path = "../indwell-reflection" }
indwell-runs = { path = "../indwell-runs" }
indwell-security = { path = "../indwell-security" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
