[package]
name = "indwell-security"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
hmac.workspace = true
indwell-channel = { path = "../indwell-channel" }
indwell-core = { path = "../indwell-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
